--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -16,7 +16,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>JavaJam Coffee Bar Menu </h1>
+            <h1>JavaJam Coffee Bar</h1>
         </header>
         <nav>
 
@@ -27,7 +27,13 @@
 
         </nav>
         <main>
+            <img src="images/mugs.jpg" alt="coffee mugs" align="right" height="300">
             <h2> Coffee at JavaJam </h2>
+            <p>
+                Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine!
+                Join our Mug Club and get a 10% discount on each cup of coffee you purchase — ask the barista for
+                details.
+            </p>
             <dl>
                 <dt> <strong>
                         Just Java </strong>
