--- a/javajam/index.html
+++ b/javajam/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="Sam Pugmire">
     <meta name="keywords" content="Homework, USU, Data Analytics and Information Systems">
     <link rel="stylesheet" href="javajam.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    
 </head>
 
 <body>
