--- a/javajam/music.html
+++ b/javajam/music.html
@@ -21,14 +21,18 @@
         </header>
         <nav>
 
-            <a href="index.html"> Home </a> &nbsp;
-            <a href="menu.html"> Menu </a> &nbsp;
-            <a href="music.html"> Music </a> &nbsp;
-            <a href="jobs.html"> Jobs </a>
+            <ul>
+                <li> <a href="index.html"> Home </a> </li>
+                <li><a href="menu.html"> Menu </a> </li>
+                <li><a href="music.html"> Music </a> </li>
+                <li><a href="jobs.html"> Jobs </a> </li>
+            </ul>
 
         </nav>
         <main>
-            
+            <div id="heroguitar">
+
+            </div>
             <h2> Music at JavaJam </h2>
             <p>
                 The first Friday night each month at JavaJam is a special night.
@@ -40,7 +44,7 @@
             </h4>
             <div class="details">
                 <a href="images/melanie.jpg">
-                    <img src="images/melaniethumb.jpg" alt="Melanie" height="100" width="100">
+                    <img src="images/melaniethumb.jpg" alt="Melanie" class = "floatleft" height="100" width="100">
                 </a>
                 Melanie Morris entertains with her melodic folk style.
             </div>
@@ -49,7 +53,7 @@
             </h4>
             <div class="details">
                 <a href="images/greg.jpg">
-                    <img src="images/gregthumb.jpg" alt="Melanie" height="100" width="100">
+                    <img src="images/gregthumb.jpg" alt="Greg" class = "floatleft"  height="100" width="100">
                 </a>
                 Tahoe Greg is back from his tour. New songs. New stories.
 
