--- a/javajam/index.html
+++ b/javajam/index.html
@@ -11,28 +11,30 @@
     <meta name="keywords" content="Homework, USU, Data Analytics and Information Systems">
     <link rel="stylesheet" href="javajam.css">
     <link rel="shortcut icon" href="favicon.ico">
-    
+
 </head>
 
 <body>
     <div id="wrapper">
         <header>
-            <h1>JavaJam Coffee Bar </h1>
+            <h1> <a href="index.html"> JavaJam Coffee Bar </a> </h1>
         </header>
         <nav>
 
-            <a href="index.html"> Home </a> &nbsp;
-            <a href="menu.html"> Menu </a> &nbsp;
-            <a href="music.html"> Music </a> &nbsp;
-            <a href="jobs.html"> Jobs </a>
+            <ul>
+                <li> <a href="index.html"> Home </a> </li>
+                <li><a href="menu.html"> Menu </a> </li>
+                <li><a href="music.html"> Music </a> </li>
+                <li><a href="jobs.html"> Jobs </a> </li>
+            </ul>
 
         </nav>
 
-        <div id="homehero">
-
-        </div>
-
         <main>
+            <div id="homehero">
+
+            </div>
+
             <h2> Follow the Winding Road to JavaJam </h2>
             <p>
                 We're a little out of the way, but take a drive in the country down Garrett Bay Road to JavaJam today!
@@ -67,9 +69,7 @@
             Copyright © 2023 JavaJam Coffee Bar <br>
             <a href="mailto:samuel.pugmire@gmail.com">samuel.pugmire@gmail.com</a>
 
-
         </footer>
-
     </div>
 </body>
 
