--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -39,13 +39,14 @@
                 Join our Mug Club and get a 10% discount on each cup of coffee you purchase — ask the barista for
                 details.
             </p>
-            <section class="onethird">
+            <div id = "flow">
+            <section>
                 <h3> Just Java </h3>
                 <p> Regular house blend, decaffeinated coffee, or flavor of the day.
                     <br> Endless Cup $3.50
                 </p>
             </section>
-            <section class="onethird">
+            <section>
                 <h3> Cafe au Lait </h3>
                 <p> House blended coffee infused into a smooth, steamed milk.
                     <br>
@@ -54,7 +55,7 @@
                     Double $5.00
                 </p>
             </section>
-            <section class="onethird">
+            <section>
                 <h3> Iced Cappuccino </h3>
                 <p>
                     Sweetened espresso blended with icy-cold milk and served in a chilled glass.
@@ -64,6 +65,7 @@
                     Double $6.50
                 </p>
             </section>
+            </div>
         </main>
 
         <footer>
