--- a/javajam/music.html
+++ b/javajam/music.html
@@ -43,21 +43,14 @@
                 January
             </h4>
             <div class="details">
-                <a href="images/melanie.jpg">
-                    <img src="images/melaniethumb.jpg" alt="Melanie" class = "floatleft" height="100" width="100">
-                </a>
-                Melanie Morris entertains with her melodic folk style.
-            </div>
-            <h4>
-                February
-            </h4>
-            <div class="details">
-                <a href="images/greg.jpg">
-                    <img src="images/gregthumb.jpg" alt="Greg" class = "floatleft"  height="100" width="100">
-                </a>
-                Tahoe Greg is back from his tour. New songs. New stories.
-
-            </div>
+                <a href="images/melanie.jpg"><img src="images/melaniethumb.jpg" alt="Melanie" width="100" height="100"></a>
+                <p>Melanie Morris entertains with her melodic folk style.</p>
+              </div>
+              <h4>February</h4>
+              <div class="details">
+                <a href="images/greg.jpg"><img src="images/gregthumb.jpg" alt="Tahoe Greg" width="100" height="100"></a>
+                <p>Tahoe Greg is back from his tour. New songs. New stories.</p>
+              </div>
             
         </main>
 
