--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -39,32 +39,30 @@
                 Join our Mug Club and get a 10% discount on each cup of coffee you purchase — ask the barista for
                 details.
             </p>
-            <div id = "flow">
-            <section>
-                <h3> Just Java </h3>
-                <p> Regular house blend, decaffeinated coffee, or flavor of the day.
-                    <br> Endless Cup $3.50
-                </p>
-            </section>
-            <section>
-                <h3> Cafe au Lait </h3>
-                <p> House blended coffee infused into a smooth, steamed milk.
-                    <br>
-                    Single $4.00
-                    <br>
-                    Double $5.00
-                </p>
-            </section>
-            <section>
-                <h3> Iced Cappuccino </h3>
-                <p>
-                    Sweetened espresso blended with icy-cold milk and served in a chilled glass.
-                    <br>
-                    Single $5.00
-                    <br>
-                    Double $6.50
-                </p>
-            </section>
+            <div id="flow">
+
+                <table>
+                    <tr>
+                        <th> Just Java </th>
+                        <td>Regular house blend, decaffeinated coffee, or flavor of the day.
+                            <br> Endless Cup $3.50
+                        </td>
+                    </tr>
+                    <tr>
+                        <th> Cafe au Lait </th>
+                        <td> House blended coffee infused into a smooth, steamed milk.
+                            <br>
+                            Single $4.00 Double $5.00
+                        </td>
+                    </tr>
+                    <tr>
+                        <th> Iced Cappuccino </th>
+
+                        <td> Sweetened espresso blended with icy-cold milk and served in a chilled glass.
+                            <br>
+                            Single $5.00 Double $6.50
+                        </td>
+                </table>
             </div>
         </main>
 
