--- a/javajam/index.html
+++ b/javajam/index.html
@@ -61,14 +61,19 @@
             <div>
                 12010 Garrett Bay Road <br>
                 Ellison Bay, WI 54210 <br>
-                <a id = "mobile" href="tel:888-555-5555"> 888-555-5555</a>
-                <span id = "desktop">888-555-5555</span>
+                <a id="mobile" href="tel:888-555-5555"> 888-555-5555</a>
+                <span id="desktop">888-555-5555</span>
             </div>
         </main>
         <footer>
 
             Copyright © 2023 JavaJam Coffee Bar <br>
             <a href="mailto:samuel.pugmire@gmail.com">samuel.pugmire@gmail.com</a>
+            <div>
+                <p id="dateupdate"> </p>
+                <script src = "js/dateupdate.js"></script>
+            
+            </div>
 
         </footer>
     </div>
