--- a/javajam/jobs.html
+++ b/javajam/jobs.html
@@ -30,7 +30,7 @@
 
         </nav>
         <main>
-            <div id = "herojobs">
+            <div id="herojobs">
             </div>
             <h2>
                 Jobs at JavaJam
@@ -56,7 +56,8 @@
 
             Copyright © 2023 JavaJam Coffee Bar <br>
             <a href="mailto:samuel.pugmire@gmail.com">samuel.pugmire@gmail.com</a>
-
+            <p id="dateupdate"></p>
+            <script src="js/dateupdate.js"></script>
 
         </footer>
 
