--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -18,6 +18,8 @@
     <div id="wrapper">
         <header>
             <h1>JavaJam Coffee Bar</h1>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+            <script src="js/common.js"></script>
         </header>
         <nav>
 
@@ -36,7 +38,8 @@
             <h2> Coffee at JavaJam </h2>
             <p>
                 Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine!
-                Join our Mug Club and get a 10% discount on each cup of coffee you purchase — ask the barista for
+                Join our <a id="mug" href="#"> Mug Club</a> and get a 10% discount on each cup of coffee you purchase —
+                ask the barista for
                 details.
             </p>
             <div id="flow">
@@ -71,7 +74,8 @@
             Copyright © 2023 JavaJam Coffee Bar <br>
             <a href="mailto:samuel.pugmire@gmail.com">samuel.pugmire@gmail.com</a>
 
-
+            <p id="dateupdate"></p>
+            <script src="js/dateupdate.js"></script>
         </footer>
 
 
