--- a/javajam/music.html
+++ b/javajam/music.html
@@ -38,27 +38,30 @@
                 The first Friday night each month at JavaJam is a special night.
                 Join us from 8 pm to 11 pm for some music you won't want to miss!
             </p>
-            
+            <p id="verify"></p>
+            <script src="js/verifysenior.js"></script>
             <h4>
                 January
             </h4>
             <div class="details">
-                <a href="images/melanie.jpg"><img src="images/melaniethumb.jpg" alt="Melanie" width="100" height="100"></a>
+                <a href="images/melanie.jpg"><img src="images/melaniethumb.jpg" alt="Melanie" width="100"
+                        height="100"></a>
                 <p>Melanie Morris entertains with her melodic folk style.</p>
-              </div>
-              <h4>February</h4>
-              <div class="details">
+            </div>
+            <h4>February</h4>
+            <div class="details">
                 <a href="images/greg.jpg"><img src="images/gregthumb.jpg" alt="Tahoe Greg" width="100" height="100"></a>
                 <p>Tahoe Greg is back from his tour. New songs. New stories.</p>
-              </div>
-            
+            </div>
+
         </main>
 
         <footer>
 
             Copyright © 2023 JavaJam Coffee Bar <br>
             <a href="mailto:samuel.pugmire@gmail.com">samuel.pugmire@gmail.com</a>
-
+            <p id="dateupdate"></p>
+            <script src="js/dateupdate.js"></script>
 
         </footer>
 
