--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -25,9 +25,10 @@
 
             <ul>
                 <li> <a href="index.html"> Home </a> </li>
-                <li><a href="menu.html"> Menu </a> </li>
+                <li><a class="current" href="menu.html">Menu</a></li>
                 <li><a href="music.html"> Music </a> </li>
                 <li><a href="jobs.html"> Jobs </a> </li>
+                <li><a href="gear.html"> Gear </a> </li>
             </ul>
 
         </nav>
