--- a/project/index.html
+++ b/project/index.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Krub:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i Krub:300,300i,400,400i,500,500i,600,600i,700,700i Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -82,10 +82,9 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
       <form id="form" role="search" method="get" action="https://www.google.com/search">
-        <input type="search" id="query" placeholder="Search Google" size=15 aria‐label="Search">
+        <input type="search" id="query" placeholder="Search Google" size=15>
       </form>
 
-      </form>
     </div>
 
   </header><!-- End Header -->
@@ -950,7 +949,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
             <p>Join our monthly newsletter for thoughts and strategies related to mental health topics.</p>
-            <form action="" method="post">
+            <form action="mailto:madeleine@newbeginningstherapy.net" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
